test/neg/neg-serial13.errc
Template argument of read must be Serializable.
C++ does not allow functions to return arrays.
